tests/suppress_incremental/test1.js.fixture
// @flow

(123: string); // error
